# media-metadata-explorer

./: README.md  agents.md  backlog.txt  pyproject.toml
src/photo_archive/: __init__.py  backup_audit.py  cli.py  config.py  database.py  frame_pipeline.py  hash_utils.py  incremental.py  models.py  normalize.py  pipeline.py  progress.py  query_filters.py  reporting.py  scanner.py  streamlit_explorer.py  thumbnail_pipeline.py
src/photo_archive.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/photo_archive/extractors/: __init__.py  exiftool_extractor.py  ffprobe_extractor.py  filename_parser.py
tests/: test_backup_audit.py  test_database.py  test_exiftool_extractor.py  test_ffprobe_extractor.py  test_filename_parser.py  test_frame_pipeline.py  test_hash_utils.py  test_incremental.py  test_normalize.py  test_pipeline.py  test_query_filters.py  test_reporting.py  test_scanner.py  test_thumbnail_pipeline.py
