[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-archive"
version = "0.1.0"
description = "Local-first media metadata ingestion pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]
ui = [
  "pandas>=2.2.0,<3.0.0",
  "streamlit>=1.40.0,<2.0.0",
]

[project.scripts]
photo-archive = "photo_archive.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
